--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -194,11 +194,11 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSett
 BoolProperty=
 PaperSpriteComponent=PaperSpriteComponent.Physics.ConstraintsGroup,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Rendering.LOD,PaperSpriteComponent.Collision.Collision,
 ParticleSystemComponent=ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,
-CameraComponent=CameraComponent.Lens.Lens|Exposure,
+CameraComponent=CameraComponent.Lens.Lens
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widgets
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -1772,18 +1772,53 @@ REINST_Background_Sprite_Blueprint_C_929.Cooking=True
 REINST_Background_Sprite_Blueprint_C_929.Input=True
 REINST_Background_Sprite_Blueprint_C_929.Actor=True
 W_Store_C.Events=True
+WidgetSwitcher.Layout=True
+WidgetSwitcher.Switcher=True
+WidgetSwitcher.Behavior=True
+WidgetSwitcher.Render Transform=True
+WidgetSwitcher.Performance=True
+WidgetSwitcher.Clipping=True
+WidgetSwitcher.Navigation=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Events=True
+W_InfinityMode_C.Layout=True
+W_InfinityMode_C.Default=True
+W_InfinityMode_C.Appearance=True
+W_InfinityMode_C.Input=True
+W_InfinityMode_C.Interaction=True
+W_InfinityMode_C.Behavior=True
+W_InfinityMode_C.Render Transform=True
+W_InfinityMode_C.Performance=True
+W_InfinityMode_C.Clipping=True
+W_InfinityMode_C.Navigation=True
+W_InfinityMode_C.Events=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+W_InfinityMode_C.Designer=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-Border="\"Object.Appearance.Background\" "
-ContentWidget="\"Object.Appearance.Background\" "
-PanelWidget="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
-Widget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Visual="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
+Border="\"Object.Appearance.Background\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|SizeBox Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|SizeBox Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 BP_GlobalSave_C=
 SaveGame=
 W_WinScreen2_C=
@@ -1810,7 +1845,7 @@ PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Obje
 UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[0].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[1].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[2].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[3].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[4].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[5].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[6].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[7].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[8].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[9].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[10].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[11].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" \"Object.Designer.DebugResolutions.DebugResolutions[12].Color\" "
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" "
-W_Menu_C="\"Object.BgMusic\" \"Object.BgMusic\" "
+W_Menu_C=
 PaperSpriteComponent="\"Object.Sprite.SpriteColor\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Sprite.SpriteColor\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -1823,20 +1858,25 @@ ParticleSystemComponent="\"Object.Lighting.LightingChannels\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-CircularThrobber="\"Object.Appearance.Image\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
-VerticalBox="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" "
-SizeBox="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
-ProgressBar="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
+CircularThrobber="\"Object.Appearance.Image\" \"Object.Layout.Slot.Object.Layout.Layout"
+VerticalBox="\"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+SizeBox="\"Object.Render Transform.RenderTransform\" "
+ProgressBar="\"Object.Layout.Slot.Object.Layout.Layout"
 BP_MenuCharacter_C="\"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperCharacter="\"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Pawn="\"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_MenuCharacter_C_873="\"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ScrollBox="\"Object.Layout.Slot.Object.Layout.Layout|ScrollBox Slot.Padding\" "
-W_Store_C="\"Object.Layout.Slot.Object.Layout.Layout|ScrollBox Slot.Padding\" "
+ScrollBox="\"Object.Layout.Slot.Object.Layout.Layout"
+W_Store_C="\"Object.Layout.Slot.Object.Layout.Layout"
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
+Overlay="\"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object.Render Transform.RenderTransform\" "
+W_InfinityMode_C="\"Object.Render Transform.RenderTransform\" "
+W_LevelPack_C=
 
 [UMGEditor.Designer]
 PreviewWidth=640
@@ -1911,6 +1951,7 @@ PreviewAspectRatio=2:3
 /Game/Blueprints/MenuGamemode.MenuGamemode=1
 /Game/Blueprints/BP_MenuCharacter.BP_MenuCharacter=1
 /Game/Blueprints/Background_Sprite_Blueprint.Background_Sprite_Blueprint=1
+/Game/Blueprints/Widgets/W_InfinityMode.W_InfinityMode=1
 
 [MessageLog]
 LastLogListing=PIE
