--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,3 +10,9 @@ ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "20F837E8410FDBD8288
 bShouldWindowPreserveAspectRatio=False
 ProjectVersion=1.0.2
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+StagingDirectory=(Path="../../../../BlockRoller/BlockRoller Beta v1.2")
+BuildConfiguration=PPBC_ShippingClient
+FullRebuild=True
+ForDistribution=False
+
