--- a/Saved/Config/Windows/GameUserSettings.ini
+++ b/Saved/Config/Windows/GameUserSettings.ini
@@ -1,10 +1,10 @@
 [/Script/Engine.GameUserSettings]
 bUseVSync=False
 bUseDynamicResolution=False
-ResolutionSizeX=1920
-ResolutionSizeY=1080
-LastUserConfirmedResolutionSizeX=1920
-LastUserConfirmedResolutionSizeY=1080
+ResolutionSizeX=1280
+ResolutionSizeY=720
+LastUserConfirmedResolutionSizeX=1280
+LastUserConfirmedResolutionSizeY=720
 WindowPosX=-1
 WindowPosY=-1
 FullscreenMode=1
@@ -26,5 +26,15 @@ HDRDisplayOutputNits=1000
 LastUserConfirmedDesiredScreenWidth=1280
 LastUserConfirmedDesiredScreenHeight=720
 LastConfirmedAudioQualityLevel=0
+
+[ScalabilityGroups]
+sg.ResolutionQuality=100.000000
+sg.ViewDistanceQuality=3
+sg.AntiAliasingQuality=3
+sg.ShadowQuality=3
+sg.PostProcessQuality=3
+sg.TextureQuality=3
+sg.EffectsQuality=3
+sg.FoliageQuality=3
 
 
