--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,10 +87,10 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/Maps/Garden/Garden_11
+LastLevel=/Game/Maps/Garden/Garden_12
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=473.000 Y=119.000
@@ -605,6 +605,24 @@ BP_CirclePlatform_C.Replication=True
 BP_CirclePlatform_C.Input=True
 BP_CirclePlatform_C.Actor=True
 Actor.Input=True
+SceneComponent.TransformCommon=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+BP_Invis_C.TransformCommon=True
+BP_Invis_C.Default=True
+BP_Invis_C.Rendering=True
+BP_Invis_C.Replication=True
+BP_Invis_C.Input=True
+BP_Invis_C.Actor=True
+BP_BuffSpeed_C.TransformCommon=True
+BP_BuffSpeed_C.Default=True
+BP_BuffSpeed_C.Rendering=True
+BP_BuffSpeed_C.Replication=True
+BP_BuffSpeed_C.Input=True
+BP_BuffSpeed_C.Actor=True
+BP_MovingPlatform_C.Tick=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -628,7 +646,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [UMGEditor.Designer]
 PreviewWidth=640
@@ -640,23 +658,24 @@ ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/LevelStuff/BP_Platform
-MRUItem1=/Game/Blueprints/Widgets/W_LoadingWidget
-MRUItem2=/Game/Blueprints/Widgets/W_InfinityMode
-MRUItem3=/Game/Blueprints/Widgets/W_Menu
-MRUItem4=/Game/Blueprints/Widgets/W_LevelChooser
-MRUItem5=/Game/Blueprints/Widgets/W_LevelPack
-MRUItem6=/Game/Blueprints/Widgets/W_SeasonButton
-MRUItem7=/Game/Blueprints/GlobalFunctions
-MRUItem8=/Game/Blueprints/Characters/BP_Character_Main
-MRUItem9=/Game/Blueprints/Widgets/W_InfinityLooseScreen
-MRUItem10=/Game/Blueprints/Widgets/W_WinScreen
-MRUItem11=/Game/Blueprints/Widgets/W_Info
-MRUItem12=/Game/Blueprints/Widgets/W_InfinityInterface
-MRUItem13=/Game/Blueprints/Widgets/W_LooseScreen
-MRUItem14=/Game/Blueprints/Widgets/W_Interface
-MRUItem15=/Game/Blueprints/Widgets/W_Pause
-MRUItem16=/Game/Blueprints/BP_MenuCharacter
+MRUItem0=/Game/Blueprints/LevelStuff/BP_MovingPlatform
+MRUItem1=/Game/Blueprints/LevelStuff/BP_Platform
+MRUItem2=/Game/Blueprints/Widgets/W_LoadingWidget
+MRUItem3=/Game/Blueprints/Widgets/W_InfinityMode
+MRUItem4=/Game/Blueprints/Widgets/W_Menu
+MRUItem5=/Game/Blueprints/Widgets/W_LevelChooser
+MRUItem6=/Game/Blueprints/Widgets/W_LevelPack
+MRUItem7=/Game/Blueprints/Widgets/W_SeasonButton
+MRUItem8=/Game/Blueprints/GlobalFunctions
+MRUItem9=/Game/Blueprints/Characters/BP_Character_Main
+MRUItem10=/Game/Blueprints/Widgets/W_InfinityLooseScreen
+MRUItem11=/Game/Blueprints/Widgets/W_WinScreen
+MRUItem12=/Game/Blueprints/Widgets/W_Info
+MRUItem13=/Game/Blueprints/Widgets/W_InfinityInterface
+MRUItem14=/Game/Blueprints/Widgets/W_LooseScreen
+MRUItem15=/Game/Blueprints/Widgets/W_Interface
+MRUItem16=/Game/Blueprints/Widgets/W_Pause
+MRUItem17=/Game/Blueprints/BP_MenuCharacter
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -748,6 +767,7 @@ AssetDialog.CurrentViewType=1
 /Game/Blueprints/Widgets/W_LevelChooser.W_LevelChooser=1
 /Game/Blueprints/Widgets/W_LoadingWidget.W_LoadingWidget=1
 /Game/Blueprints/LevelStuff/BP_Platform.BP_Platform=1
+/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform=1
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1414,12 +1434,13 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/Garden/Garden_11
-MRUItem1=/Game/Maps/Garden/Garden_test
-MRUItem2=/Game/Maps/InfiniteModes/infinityMode_Demonic
-MRUItem3=/Game/Maps/LavaLake/LavaLake_1
-MRUItem4=/Game/Maps/NeonHell/NeonHell_1
-MRUItem5=/Game/Maps/WIP/WIP_4
+MRUItem0=/Game/Maps/Garden/Garden_12
+MRUItem1=/Game/Maps/Garden/Garden_11
+MRUItem2=/Game/Maps/Garden/Garden_test
+MRUItem3=/Game/Maps/InfiniteModes/infinityMode_Demonic
+MRUItem4=/Game/Maps/LavaLake/LavaLake_1
+MRUItem5=/Game/Maps/NeonHell/NeonHell_1
+MRUItem6=/Game/Maps/WIP/WIP_4
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1445,9 +1466,11 @@ ShowUnusedLayers=True
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_BuffSpeed.BP_BuffSpeed;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
