--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,7 +87,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/Maps/Garden/Garden_12
+LastLevel=/Game/Maps/Garden/Garden_13
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -623,6 +623,35 @@ BP_BuffSpeed_C.Replication=True
 BP_BuffSpeed_C.Input=True
 BP_BuffSpeed_C.Actor=True
 BP_MovingPlatform_C.Tick=True
+BP_LockedDoor_C.TransformCommon=True
+BP_LockedDoor_C.Default=True
+BP_LockedDoor_C.Rendering=True
+BP_LockedDoor_C.Replication=True
+BP_LockedDoor_C.Input=True
+BP_LockedDoor_C.Actor=True
+BP_Key_C.TransformCommon=True
+BP_Key_C.Default=True
+BP_Key_C.Rendering=True
+BP_Key_C.Replication=True
+BP_Key_C.Input=True
+BP_Key_C.Actor=True
+BP_Portal_OneTime_C.TransformCommon=True
+BP_Portal_OneTime_C.Default=True
+BP_Portal_OneTime_C.Rendering=True
+BP_Portal_OneTime_C.Replication=True
+BP_Portal_OneTime_C.Input=True
+BP_Portal_OneTime_C.Actor=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Materials=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -1434,13 +1463,14 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/Garden/Garden_12
-MRUItem1=/Game/Maps/Garden/Garden_11
-MRUItem2=/Game/Maps/Garden/Garden_test
-MRUItem3=/Game/Maps/InfiniteModes/infinityMode_Demonic
-MRUItem4=/Game/Maps/LavaLake/LavaLake_1
-MRUItem5=/Game/Maps/NeonHell/NeonHell_1
-MRUItem6=/Game/Maps/WIP/WIP_4
+MRUItem0=/Game/Maps/Garden/Garden_13
+MRUItem1=/Game/Maps/Garden/Garden_12
+MRUItem2=/Game/Maps/Garden/Garden_11
+MRUItem3=/Game/Maps/Garden/Garden_test
+MRUItem4=/Game/Maps/InfiniteModes/infinityMode_Demonic
+MRUItem5=/Game/Maps/LavaLake/LavaLake_1
+MRUItem6=/Game/Maps/NeonHell/NeonHell_1
+MRUItem7=/Game/Maps/WIP/WIP_4
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1466,12 +1496,17 @@ ShowUnusedLayers=True
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Slow.BP_Slow;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Shield.BP_Shield;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_BuffSpeed.BP_BuffSpeed;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Key.BP_Key;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
