--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,19 +78,26 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=720
-MultipleInstanceLastWidth=1280
+MultipleInstanceLastHeight=1136
+MultipleInstanceLastWidth=640
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-4GJPE4Q
 LastExecutedLaunchName=DESKTOP-4GJPE4Q
 LastExecutedPIEPreviewDevice=
-DeviceToEmulate=
+DeviceToEmulate=iPhone5S
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+NewWindowWidth=640
+NewWindowHeight=1136
+NewWindowPosition=(X=635,Y=0)
 
 [EditorStartup]
-LastLevel=/Game/Maps/Garden/Garden_13
+LastLevel=/Game/Maps/M_Loading1
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Widgets/W_Menu.W_Menu
+OpenAssetsAtExit=/Game/Blueprints/Widgets/W_LevelChooser.W_LevelChooser
+OpenAssetsAtExit=/Game/Blueprints/Widgets/W_LevelPack.W_LevelPack
+OpenAssetsAtExit=/Game/Blueprints/Widgets/W_InfinityMode.W_InfinityMode
 
 [RootWindow]
 ScreenPosition=X=473.000 Y=119.000
@@ -652,6 +659,7 @@ ParticleSystemComponent.LOD=True
 ParticleSystemComponent.Tags=True
 ParticleSystemComponent.Activation=True
 ParticleSystemComponent.Cooking=True
+W_LevelPack_C.Designer=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -663,13 +671,13 @@ Widget=
 Visual=
 Button="\"Object.Appearance.WidgetStyle\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" "
-PanelWidget=
+PanelWidget="\"Object.Appearance.WidgetStyle\" "
 Border="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
 SizeBox=
 HorizontalBox=
 W_SeasonButton_C=
 UserWidget=
-ScrollBox="\"Object.Style.WidgetStyle\" "
+ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.RightShadowBrush\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -687,24 +695,26 @@ ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/LevelStuff/BP_MovingPlatform
-MRUItem1=/Game/Blueprints/LevelStuff/BP_Platform
-MRUItem2=/Game/Blueprints/Widgets/W_LoadingWidget
-MRUItem3=/Game/Blueprints/Widgets/W_InfinityMode
-MRUItem4=/Game/Blueprints/Widgets/W_Menu
-MRUItem5=/Game/Blueprints/Widgets/W_LevelChooser
-MRUItem6=/Game/Blueprints/Widgets/W_LevelPack
-MRUItem7=/Game/Blueprints/Widgets/W_SeasonButton
-MRUItem8=/Game/Blueprints/GlobalFunctions
-MRUItem9=/Game/Blueprints/Characters/BP_Character_Main
-MRUItem10=/Game/Blueprints/Widgets/W_InfinityLooseScreen
-MRUItem11=/Game/Blueprints/Widgets/W_WinScreen
-MRUItem12=/Game/Blueprints/Widgets/W_Info
-MRUItem13=/Game/Blueprints/Widgets/W_InfinityInterface
-MRUItem14=/Game/Blueprints/Widgets/W_LooseScreen
-MRUItem15=/Game/Blueprints/Widgets/W_Interface
-MRUItem16=/Game/Blueprints/Widgets/W_Pause
-MRUItem17=/Game/Blueprints/BP_MenuCharacter
+MRUItem0=/Game/Blueprints/Widgets/W_InfinityMode
+MRUItem1=/Game/Blueprints/Widgets/W_LevelPack
+MRUItem2=/Game/Blueprints/Widgets/W_LevelChooser
+MRUItem3=/Game/Blueprints/Widgets/W_Menu
+MRUItem4=/Game/Maps/Garden/Garden_12
+MRUItem5=/Game/Maps/Garden/Garden_11
+MRUItem6=/Game/Maps/Garden/Garden_10
+MRUItem7=/Game/Maps/Garden/Garden_9
+MRUItem8=/Game/Maps/M_Loading1
+MRUItem9=/Game/Maps/Garden/Garden_1
+MRUItem10=/Game/Blueprints/LevelStuff/BP_MovingPlatform
+MRUItem11=/Game/Blueprints/LevelStuff/BP_Platform
+MRUItem12=/Game/Blueprints/Widgets/W_LoadingWidget
+MRUItem13=/Game/Blueprints/Widgets/W_SeasonButton
+MRUItem14=/Game/Blueprints/GlobalFunctions
+MRUItem15=/Game/Blueprints/Characters/BP_Character_Main
+MRUItem16=/Game/Blueprints/Widgets/W_InfinityLooseScreen
+MRUItem17=/Game/Blueprints/Widgets/W_WinScreen
+MRUItem18=/Game/Blueprints/Widgets/W_Info
+MRUItem19=/Game/Blueprints/Widgets/W_InfinityInterface
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -753,7 +763,7 @@ User Created=False
 Common=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Interactables
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widgets
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -1450,8 +1460,8 @@ HierarchicalLODOutliner.TimeStamp=2019.01.04-19.18.43
 HierarchicalLODOutliner.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2019.01.04-19.18.32
 BlueprintGraph.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2018.11.23-11.40.05
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.11.24-19.24.48
+SequencerWidgets.LastCompileMethod=External
 Voice.TimeStamp=2019.01.04-19.19.06
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2019.01.04-19.18.50
@@ -1463,14 +1473,18 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/Garden/Garden_13
-MRUItem1=/Game/Maps/Garden/Garden_12
-MRUItem2=/Game/Maps/Garden/Garden_11
-MRUItem3=/Game/Maps/Garden/Garden_test
-MRUItem4=/Game/Maps/InfiniteModes/infinityMode_Demonic
-MRUItem5=/Game/Maps/LavaLake/LavaLake_1
-MRUItem6=/Game/Maps/NeonHell/NeonHell_1
-MRUItem7=/Game/Maps/WIP/WIP_4
+MRUItem0=/Game/Maps/Garden/Garden_12
+MRUItem1=/Game/Maps/Garden/Garden_11
+MRUItem2=/Game/Maps/Garden/Garden_10
+MRUItem3=/Game/Maps/Garden/Garden_9
+MRUItem4=/Game/Maps/M_Loading1
+MRUItem5=/Game/Maps/Garden/Garden_1
+MRUItem6=/Game/Maps/Garden/Garden_13
+MRUItem7=/Game/Maps/Garden/Garden_test
+MRUItem8=/Game/Maps/InfiniteModes/infinityMode_Demonic
+MRUItem9=/Game/Maps/LavaLake/LavaLake_1
+MRUItem10=/Game/Maps/NeonHell/NeonHell_1
+MRUItem11=/Game/Maps/WIP/WIP_4
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1509,5 +1523,8 @@ RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+
+[DetailCategoriesAdvanced]
+ObjectProperty.Variable=False
 
 
