--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -90,7 +90,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/Maps/Garden/Garden_13
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=473.000 Y=119.000
@@ -505,7 +505,7 @@ PaperSpriteActor.Input=True
 PaperSpriteActor.Actor=True
 LandscapeEditorObject.New Landscape=True
 BP_Platform_C.TransformCommon=True
-BP_Platform_C.Rendering=True
+BP_Platform_C.Rendering=False
 BP_Platform_C.Replication=True
 BP_Platform_C.Input=True
 BP_Platform_C.Actor=True
@@ -652,6 +652,12 @@ ParticleSystemComponent.LOD=True
 ParticleSystemComponent.Tags=True
 ParticleSystemComponent.Activation=True
 ParticleSystemComponent.Cooking=True
+BP_Slow_C.TransformCommon=True
+BP_Slow_C.Default=True
+BP_Slow_C.Rendering=True
+BP_Slow_C.Replication=True
+BP_Slow_C.Input=True
+BP_Slow_C.Actor=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -1496,6 +1502,7 @@ ShowUnusedLayers=True
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Slow.BP_Slow;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Shield.BP_Shield;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_BuffSpeed.BP_BuffSpeed;
@@ -1506,7 +1513,6 @@ RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
