--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,12 +88,10 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/Maps/Garden/Garden_2
+LastLevel=/Game/Maps/Garden/Garden_14
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_Background.BP_Background
-OpenAssetsAtExit=/Game/Blueprints/Characters/BP_Character_Main.BP_Character_Main
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=94.000 Y=168.000
@@ -731,6 +729,19 @@ SceneComponent.Variable=True
 SceneComponent.Sockets=True
 SceneComponent.ComponentReplication=True
 SceneComponent.Events=True
+Background_Sprite_Blueprint_C.TransformCommon=True
+Background_Sprite_Blueprint_C.Sprite=True
+Background_Sprite_Blueprint_C.Materials=True
+Background_Sprite_Blueprint_C.Physics=True
+Background_Sprite_Blueprint_C.Collision=True
+Background_Sprite_Blueprint_C.Lighting=True
+Background_Sprite_Blueprint_C.Rendering=True
+Background_Sprite_Blueprint_C.Tags=True
+Background_Sprite_Blueprint_C.Activation=True
+Background_Sprite_Blueprint_C.Cooking=True
+Background_Sprite_Blueprint_C.Replication=True
+Background_Sprite_Blueprint_C.Input=True
+Background_Sprite_Blueprint_C.Actor=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -759,7 +770,7 @@ SceneComponent=
 ActorComponent=
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [UMGEditor.Designer]
 PreviewWidth=640
@@ -1557,16 +1568,18 @@ MeshBuilder.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/Garden/Garden_2
-MRUItem1=/Game/Maps/Garden/Garden_1
-MRUItem2=/Game/Maps/Garden/Garden_13
-MRUItem3=/Game/Maps/Garden/Garden_12
-MRUItem4=/Game/Maps/Garden/Garden_11
-MRUItem5=/Game/Maps/Garden/Garden_test
-MRUItem6=/Game/Maps/InfiniteModes/infinityMode_Demonic
-MRUItem7=/Game/Maps/LavaLake/LavaLake_1
-MRUItem8=/Game/Maps/NeonHell/NeonHell_1
-MRUItem9=/Game/Maps/WIP/WIP_4
+MRUItem0=/Game/Maps/Garden/Garden_14
+MRUItem1=/Game/Maps/Garden/Garden_13
+MRUItem2=/Game/Maps/Garden/Garden_12
+MRUItem3=/Game/Maps/Garden/Garden_11
+MRUItem4=/Game/Maps/Garden/Garden_10
+MRUItem5=/Game/Maps/Garden/Garden_9
+MRUItem6=/Game/Maps/Garden/Garden_8
+MRUItem7=/Game/Maps/Garden/Garden_7
+MRUItem8=/Game/Maps/Garden/Garden_6
+MRUItem9=/Game/Maps/Garden/Garden_5
+MRUItem10=/Game/Maps/Garden/Garden_4
+MRUItem11=/Game/Maps/Garden/Garden_3
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1594,6 +1607,7 @@ PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_Background.BP_Background;
+RecentlyPlaced=/Game/Blueprints/Background_Sprite_Blueprint.Background_Sprite_Blueprint;
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_2_Sprite.clouds_2_Sprite;
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_1_Sprite.clouds_1_Sprite;
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/game_background_1_Sprite.game_background_1_Sprite;
@@ -1612,7 +1626,6 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
 RecentlyPlaced=/Game/MobileStarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
 
 [PathColor]
 /Game/Assets=(R=0.000000,G=0.106163,B=0.500000,A=1.000000)
